@@ -1,9 +1,8 @@
 package dev.sultanov.keycloak.multitenancy.protocol.oidc.mappers;
 
-import dev.sultanov.keycloak.multitenancy.model.TenantProvider;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
 import org.keycloak.models.ClientSessionContext;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.ProtocolMapperModel;
@@ -15,6 +14,8 @@ import org.keycloak.protocol.oidc.mappers.OIDCIDTokenMapper;
 import org.keycloak.protocol.oidc.mappers.UserInfoTokenMapper;
 import org.keycloak.provider.ProviderConfigProperty;
 import org.keycloak.representations.IDToken;
+
+import dev.sultanov.keycloak.multitenancy.model.TenantProvider;
 
 public class AllTenantsMapper extends AbstractOIDCProtocolMapper implements OIDCAccessTokenMapper, OIDCIDTokenMapper,
         UserInfoTokenMapper {
@@ -59,7 +60,7 @@ public class AllTenantsMapper extends AbstractOIDCProtocolMapper implements OIDC
         var provider = keycloakSession.getProvider(TenantProvider.class);
         var claim = provider.getTenantMembershipsStream(userSession.getRealm(), userSession.getUser())
                 .map(ClaimsFactory::toClaim)
-                .collect(Collectors.toList());
+                .toList();
         if (!claim.isEmpty()) {
             var claimName = mappingModel.getConfig().get(OIDCAttributeMapperHelper.TOKEN_CLAIM_NAME);
             token.getOtherClaims().put(claimName, claim);
